syntax = "proto3";
package auth.v1;
option csharp_namespace = "UserService.Grpc.v1";

import "google/api/annotations.proto";
import "google/protobuf/Empty.proto";


service Auth {
	rpc Login (LoginRequest) returns (TokenResponse)
	{
		option (google.api.http) = {
			post: "/v1/auth/login"
			body: "*"
		};
	}
	rpc Refresh(RefreshRequest) returns (TokenResponse)
	{
		option (google.api.http) = {
			post: "/v1/auth/refresh"
			body: "*"
		};
	}
    rpc Register(RegisterRequest) returns (RegisterResponse){
        option (google.api.http) = {
            post: "/v1/auth/register"
            body: "*"
        };
    }
	rpc Ports(google.protobuf.Empty) returns (PortsResponse)
	{
		option (google.api.http) = {
			post: "/v1/auth/data"
			body: "*"
		};
	}

}
//Login request
message LoginRequest {
	string Email = 1;
	string Password = 2;

}
//Login response
message TokenResponse {
	string AccessToken = 1;
	string RefreshToken = 2;
}
//Refresh
message RefreshRequest {
	string RefreshToken = 1;
}
message RegisterRequest{
    string Email = 1;
    string Password = 2;
}
message RegisterResponse{
    string message =1;
}
//Data
message PortsResponse {
	string Data=1;
}